links spacing fix

--- a/src/components/Links/links.module.scss
+++ b/src/components/Links/links.module.scss
@@ -13,7 +13,7 @@
 
   a {
     color: $color5;
-    margin: 2px 0;
+    margin: 5px 0;
     text-decoration: none;
     width: 120px;
 
